--- a/backoffice/Backoffice/BackofficeComponent.csproj
+++ b/backoffice/Backoffice/BackofficeComponent.csproj
@@ -5,8 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.12" />
     <PackageReference Include="MongoDB.Bson" Version="2.14.0-beta1" />
     <PackageReference Include="MongoDB.Driver" Version="2.14.0-beta1" />
+    <PackageReference Include="PostSharp" Version="6.10.3-preview" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
