added backoffice docker image

--- a/backoffice/Backoffice/appsettings.json
+++ b/backoffice/Backoffice/appsettings.json
@@ -11,5 +11,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://+:8090"
+      }
+    }
+  },
   "AllowedHosts": "*"
 }
