--- a/semanticanalysis/Dockerfile
+++ b/semanticanalysis/Dockerfile
@@ -3,4 +3,4 @@ WORKDIR /app
 COPY . /app
 RUN mvn package
 EXPOSE 8080
-CMD ["mvn", "spring-boot:run"]
+CMD ["mvn", "spring-boot:run", "-Drun.jvmArguments=\"-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8081\""]
