--- a/semanticanalysis/pom.xml
+++ b/semanticanalysis/pom.xml
@@ -30,7 +30,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.10</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.0</version>
+        </dependency>
         <!--        testing dependencies    -->
 
         <dependency>
