--- a/backoffice/Backoffice/appsettings.json
+++ b/backoffice/Backoffice/appsettings.json
@@ -13,8 +13,11 @@
   },
   "Kestrel": {
     "EndPoints": {
+      "Https": {
+        "Url": "https://+:8090"
+      },
       "Http": {
-        "Url": "http://+:8090"
+        "Url": "http://+:8091"
       }
     }
   },
