added regex support

--- a/backoffice/Backoffice/Dockerfile
+++ b/backoffice/Backoffice/Dockerfile
@@ -2,6 +2,8 @@ FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /source
 #ENV ASPNETCORE_URLS=http://+:8090
 EXPOSE 8090
+EXPOSE 27015
+EXPOSE 27017
 
 # copy csproj and restore as distinct layers
 COPY /*.csproj ./
@@ -16,5 +18,5 @@ RUN dotnet publish -c release -o /app --no-restore
 FROM mcr.microsoft.com/dotnet/aspnet:5.0
 WORKDIR /app
 COPY --from=build /app ./
-ENV ASPNETCORE_URLS=https://+:80
-ENTRYPOINT ["dotnet", "BackofficeComponent.dll","--server.urls", "https://+:8090"] 
+ENV ASPNETCORE_URLS=http://+:80
+ENTRYPOINT ["dotnet", "BackofficeComponent.dll","--server.urls", "http://+:8090"]
